CHANGED: floating for the blueman-manager is fixed

--- a/.i3/config
+++ b/.i3/config
@@ -195,7 +195,7 @@ for_window [class="^Xfrun4$"] floating enable
 for_window [class="^Xfce4-appfinder$"] floating enable
 no_focus   [class="^Xfce4-notifyd$" ]
 for_window [class="^cameraclient$"] floating enable
-for_window [class="^blueman-manager$"] floating enable
+for_window [class="^Blueman-manager$"] floating enable
 for_window [class="^galculator$"] floating enable
 for_window [class="^vlc$"] floating enable
 for_window [class="^ffplay$"] floating enable
