CHANGED: mpv playlist plugin updated

--- a/.config/mpv/lua-settings/playlistmanager.conf
+++ b/.config/mpv/lua-settings/playlistmanager.conf
@@ -15,7 +15,7 @@ loadfiles_filetypes=["mkv","avi","mp4","ogv","webm","rmvb","flv","wmv","mpeg","m
 loadfiles_on_start=no
 
 #sort playlist on mpv start
-sortplaylist_on_start=no
+sortplaylist_on_start=yes
 
 #sort playlist when any files are added to playlist after initial load
 sortplaylist_on_file_add=no
@@ -33,13 +33,13 @@ dynamic_binds=yes
 playlist_savepath=/home/alex/Documents/
 
 #2 shows playlist, 1 shows current file(filename strip applied), 0 shows nothing
-show_playlist_on_fileload=0
+show_playlist_on_fileload=2
 
 #sync cursor when file is loaded from outside reasons(file-ending, playlist-next shortcut etc.)
 sync_cursor_on_load=yes
 
 #playlist open key will toggle visibility instead of refresh
-open_toggles=yes
+open_toggles=no
 
 #allow the playlist cursor to loop from end to start and vice versa
 loop_cursor=yes
