--- a/.grc/grc.conf
+++ b/.grc/grc.conf
@@ -1,7 +1,3 @@
-# nmap command
-(^|[/\w\.]+/)nmap\s?
-conf.nmap
-
 # hexdump
 (^|[/\w\.]+/)hexdump\s?
 conf.hexdump
@@ -23,7 +19,7 @@ conf.log
 conf.configure
 
 # ping command
-(^|[/\w\.]+/)ping6?\s
+(^|[/\w\.]+/)(io|o|n|h|arp|l2)?ping[236]?\s
 conf.ping
 
 # traceroute command
@@ -31,7 +27,7 @@ conf.ping
 conf.traceroute
 
 # gcc command
-(^|[/\w\.]+/)g?cc\s
+(^|[/\w\.]+/)(g?cc|[gc]\+\+)\s
 conf.gcc
 
 # make command
@@ -42,6 +38,14 @@ conf.gcc
 (^|[/\w\.]+/)netstat\s?
 conf.netstat
 
+# stat command
+(^|[/\w\.]+/)stat\s?
+conf.stat
+
+# ss command
+(^|[/\w\.]+/)ss\s?
+conf.ss
+
 # diff command
 (^|[/\w\.]+/)diff\s?
 conf.diff
@@ -50,9 +54,9 @@ conf.diff
 (^|[/\w\.]+/)wdiff\s?
 conf.wdiff
 
-# last command
-(^|[/\w\.]+/)last\s?
-conf.log
+# last/who command
+(^|[/\w\.]+/)(last|who)\s?
+conf.last
 
 # ldap tools
 (^|[/\w\.]+/)ldap
@@ -65,6 +69,10 @@ conf.cvs
 # mount command
 (^|[/\w\.]+/)mount\s?
 conf.mount
+
+# findmnt command
+(^|[/\w\.]+/)findmnt\s?
+conf.findmnt
 
 # mtr command
 (^|[/\w\.]+/)mtr\s?
@@ -83,7 +91,7 @@ conf.dig
 conf.ifconfig
 
 # ls command
-(^|[/\w\.]+/)ls\s?
+(^|[/\w\.]+/)ls\s
 conf.ls
 
 # mount
@@ -93,3 +101,180 @@ conf.mount
 # df
 (^|[/\w\.]+/)df\s?
 conf.df
+
+# du
+(^|[/\w\.]+/)du\s?
+conf.du
+
+# ip addr/link
+(^|[/\w\.]+/)ip a(ddr)*\s?
+conf.ipaddr
+
+(^|[/\w\.]+/)ip ?(-.)* ?l(ink)*\s?
+conf.ipaddr
+
+# ip route
+(^|[/\w\.]+/)ip r(oute)*\s?
+conf.iproute
+
+# ip neighbor
+(^|[/\w\.]+/)ip n(eighbor)*\s?
+conf.ipneighbor
+
+# ip command - rest of commands
+(^|[/\w\.]+/)ip?\s
+conf.ip
+
+# env
+(^|[/\w\.]+/)env\s?
+conf.env
+
+# systemctl show
+(^|[/\w\.]+/)systemctl show\s?
+conf.env
+
+# iptables
+(^|[/\w\.]+/)iptables\s?
+conf.iptables
+
+# lspci
+(^|[/\w\.]+/)lspci\s?
+conf.lspci
+
+# lsblk
+(^|[/\w\.]+/)lsblk\s?
+conf.lsblk
+
+# lsof
+(^|[/\w\.]+/)lsof\s?
+conf.lsof
+
+# blkid
+(^|[/\w\.]+/)blkid\s?
+conf.blkid
+
+# id
+(^|[/\w\.]+/)id\s?
+conf.id
+
+# iostat / sar
+(^|[/\w\.]+/)(iostat|sar)\s?
+conf.iostat_sar
+
+# fdisk
+(^|[/\w\.]+/)fdisk -l\s?
+conf.fdisk
+
+# free
+(^|[/\w\.]+/)free\s?
+conf.free
+
+# findmnt
+(^|[/\w\.]+/)findmnt\s?
+conf.findmnt
+
+------------
+# docker
+
+# docker ps
+(^|[/\w\.]+/)docker(-compose)? ps\s?
+conf.dockerps
+
+(^|[/\w\.]+/)docker images\s?
+conf.dockerimages
+
+(^|[/\w\.]+/)docker search\s?
+conf.dockersearch
+
+#(^|[/\w\.]+/)docker pull\s?
+#conf.dockerpull
+
+(^|[/\w\.]+/)docker-machine ls\s?
+conf.docker-machinels
+
+(^|[/\w\.]+/)docker network ls\s?
+conf.dockernetwork
+
+(^|[/\w\.]+/)docker info\s?
+conf.dockerinfo
+
+(^|[/\w\.]+/)docker version\s?
+conf.dockerversion
+------------
+
+# journalctl command
+(^|[/\w\.]+/)journalctl?\s
+conf.log
+
+# systemctl command
+(^|[/\w\.]+/)systemctl?\s
+conf.systemctl
+
+# sysctl command
+(^|[/\w\.]+/)sysctl?\s
+conf.sysctl
+
+# tcpdump command
+(^|[/\w\.]+/)tcpdump\s?
+conf.tcpdump
+
+# tune2fs command
+(^|[/\w\.]+/)tune2fs\s?
+conf.tune2fs
+
+# lsmod
+(^|[/\w\.]+/)lsmod\s?
+conf.lsmod
+
+# lsattr
+(^|[/\w\.]+/)lsattr\s?
+conf.lsattr
+
+# semanage ---------------------------------
+(^|[/\w\.]+/)semanage boolean\s?
+conf.semanageboolean
+(^|[/\w\.]+/)semanage fcontext\s?
+conf.semanagefcontext
+(^|[/\w\.]+/)semanage (user|login|port)\s?
+conf.semanageuser
+
+# getsebool
+(^|[/\w\.]+/)getsebool\s?
+conf.getsebool
+
+# ulimit
+(^|[/\w\.]+/)ulimit\s?
+conf.ulimit
+
+# vmstat
+(^|[/\w\.]+/)vmstat\s?
+conf.vmstat
+
+# dnf
+(^|[/\w\.]+/)dnf\s?
+conf.dnf
+
+# nmap
+(^|[/\w\.]+/)nmap\s?
+conf.nmap
+
+# uptime | w
+(^|[/\w\.]+/)(uptime|w)\s?
+conf.uptime
+
+# getfacl
+(^|[/\w\.]+/)getfacl\s?
+conf.getfacl
+
+# showmount
+(^|[/\w\.]+/)showmount\s?
+conf.showmount
+
+# apache ant command
+(^|[/\w\.]+/)ant\s?
+conf.ant
+
+# # apache maven command
+(^|[/\w\.]+/)mvn\s?
+conf.mvn
+
